# encapfn

./: .gitignore  Cargo.toml  README.md
src/: branding.rs  lib.rs  types.rs
src/abi/: calling_convention.rs  mod.rs  rv32i_c.rs  sysv_amd64.rs
src/rt/: mock.rs  mod.rs  rv32i_c.rs  sysv_amd64.rs
src/rt/mock/: heap_alloc.rs  mod.rs  stack_alloc.rs
src/util/: maybe_uninit_as_bytes.rs  mod.rs  stack_alloc.rs
